# LiveCaptionsEnhanced

./: .gitignore  Instrucciones actualizadas.odt  Instrucciones.walter  README.md  meson.build
data/: gschemas.compiled  meson.build  net.waltergarcia.LiveCaptions.appdata.xml.in  net.waltergarcia.LiveCaptions.desktop.in  net.waltergarcia.LiveCaptions.gschema.xml
data/icons/: meson.build
ignore/: generar_contenido.sh
po/: POTFILES
src/: asrproc.c  asrproc.h  common.h  dbus-interface.xml  history.c  history.h  line-gen.c  line-gen.h  livecaptions-application.c  livecaptions-history-window.c  livecaptions-settings.c  livecaptions-settings.ui  livecaptions-welcome.c  livecaptions-welcome.ui  livecaptions-window.c  livecaptions-window.h  livecaptions-window.ui  livecaptions.gresource.xml  main.c  meson.build  style.css
subprojects/: april-asr.wrap
